# hal2vg

./: .gitmodules  .travis.yml  Dockerfile  IntervalTree.h  LICENSE  Makefile  README.md  ReleaseNotes.md  chop-vg-paths.cpp  clip-vg.cpp  count-vg-hap-cov.cpp  filter-paf-deletions.cpp  hal2vg.cpp  halMergeChroms.cpp  halRemoveDupes.cpp  halUnclip.cpp  include.mk  paf.hpp  sg2vghandle.cpp  sg2vghandle.h  sg2vgproto.cpp  sg2vgproto.h  subpaths.h
build-tools/: CMakeLists.txt  makeBinRelease  makeSrcRelease  releaseLib.sh
example_data/: cerevisiae.txt  cerevisiae_chrom.txt  similar_yeast_config.xml
tests/: small.t
tests/chop/: tiny-flat.gfa  tiny-rev.gfa
tests/small/: small.maf  small2.maf  truth.json  truth_cat.json
tests/t/: chop.t  merge.t
